--- a/style.css
+++ b/style.css
@@ -8,10 +8,9 @@ article{background-color: white; flex: 4; margin-left: 10px; border-radius: 25px
 aside{background-color: #ffd1dc; flex: 1;margin-left: 10px; border-radius: 25px;margin-right:10px;padding: 15px 20px}
 footer{background-color: #ffd1dc; outline:10px solid white; flex: 2;margin:10px; border-radius: 25px;padding: 15px 20px}
 .Volver {text-decoration: none; color: black;}
-.nav {font-size: large;}
 .mensaje {margin-bottom: 2em; margin: 15px !important;}
 .reset {display: inline;}
-table {border: #ffbccc 5px solid; border-spacing: 0;border-radius: 25px !important;padding: 10px 10px; background-color: white; margin: 1px;}
+table {border: #ffbccc 5px solid; border-spacing: 0;border-radius: 25px !important;padding: 10px 10px; background-color: white; height: 100% ;}
 th {text-align: center !important;}
 .dropdown {display: inline-block; position: relative; border: 1px solid #ffd1dc;text-decoration: none; color: black !important;}
 .dropdown-content {display: none; position: absolute; width: auto; overflow: auto;box-shadow: 0px 10px 10px 0px #ffbccc; background-color: #ffbccc;
