--- a/apartados Nueva version/stylePrevenciones.css
+++ b/apartados Nueva version/stylePrevenciones.css
@@ -7,7 +7,7 @@ main{outline: 10px solid white; flex: 14; display: flex; flex-direction: row; te
 article{background-color: white; flex: 4; margin-left: 10px; border-radius: 25px;padding: 15px 20px; font-size: 2vh;}
 aside{background-color: #ffd1dc; flex: 1;margin-left: 10px; border-radius: 25px;margin-right:10px;padding: 15px 20px}
 footer{background-color: #ffd1dc; outline:10px solid white; flex: 2;margin:10px; border-radius: 25px;padding: 15px 20px}
-.Volver {text-decoration: none; color: #ff90aa;}
+.Volver {text-decoration: none; color: black; font-size: 2.5vh}
 .mensaje {margin-bottom: 2em; margin: 15px !important;}
 .reset {display: inline;}
 table {border: #ffbccc 5px solid; border-spacing: 0;border-radius: 25px !important;padding: 10px 10px; background-color: white; margin: 1px;}
@@ -17,11 +17,12 @@ th {text-align: center !important;}
 .dropdown:hover .dropdown-content {display: block;}
 .dropdown-content a {display: block;color: #000000;padding: 5px;text-decoration: none;}
 .dropdown-content a:hover {color: #ff90aa;background-color: #ffbccc;}
-.Volver { font-size: 2.5vh}
 .tooltip {text-decoration:none;position:relative;display: inline;}
-.tooltip span {display:none;}
+.tooltip span {display:none; margin-left: 1em; font-size: x-large;}
 .tooltip span img {float:left;display:inline;}
-.tooltip:hover span {display:inline;position:absolute;overflow:hidden;}
+.tooltip:hover span {display:inline;position:absolute;overflow:hidden; width: 1000px;}
 .paragrafo {font-size: x-large;}
-.fotointro {margin-top: 5em;height: 40vh; width: 40vw; float: inline-end; margin-right: 12.5em;}
-.Volver2 {color: #ff90aa;}
+.fotointro {height: 35vh; float: right;}
+.Volver2 {color: #ff90aa; font-size: 2.5vh}
+.textomanos {margin-left: 5px;}
+a:hover.Volver {color: #ff90aa;}
