--- a/apartados Nueva version/styleintro.css
+++ b/apartados Nueva version/styleintro.css
@@ -15,7 +15,7 @@ body{
 }
 nav {
     background-color: #ffd1dc; 
-    flex: 1;margin:10px;
+    margin:10px;
     border-radius: 25px;}
 
 ul{
@@ -28,10 +28,10 @@ ul{
 }
 main{
     outline: 10px solid white; 
-    flex: 14; 
     display: flex; 
     flex-direction: row; 
     text-align: justify;
+    height: 80vh;
 }
 article{
     flex: 4; 
@@ -46,6 +46,7 @@ aside{
     border-radius: 25px;
     margin-right:10px;
     padding: 15px 20px;
+    width: 4vw;
 }
 footer{
     background-color: #ffd1dc; 
@@ -61,7 +62,9 @@ footer{
 }
 .mensaje {
     margin: 2vh !important;
-    text-align: center !important
+    text-align: center !important;
+    font-size: 2vh;
+    
 }
 .reset {
     display: inline;
@@ -77,7 +80,7 @@ footer{
     flex-direction: column;
     overflow-x: hidden;
     overflow-y: scroll;
-    max-height: 70vh;}
+    max-height: 64vh;}
 .dropdown {
     display: inline-block; 
     position: relative; 
@@ -139,4 +142,9 @@ footer{
 }
 a:hover.Volver {
     color: #ff90aa;
+}
+textarea {
+    resize: none;
+    width: 18vw;
+    min-width: 0.1vw;
 }
