--- a/apartados Nueva version2/styleCuraciones.css
+++ b/apartados Nueva version2/styleCuraciones.css
@@ -233,7 +233,7 @@ body {
     width: 37vw;
     height:  34.3vh;
 }
-@media screen and (max-width:800px){
+@media screen and (max-width:880px){
     nav {
         width: 100%;
         height: auto;
@@ -259,6 +259,10 @@ body {
         font-size: 25px;
         background-color: #ffd1dc; 
         border-bottom: 1px solid rgba(255,255,255, .3);
+        width: auto;
+    }
+    .mensaje {
+        font-size: x-large;
     }
     .paragrafo{
         font-size: 2.3vh;
@@ -282,6 +286,7 @@ body {
     aside {
         border-radius: 0px !important;
         margin-right: 0px;
+        width: 98vw
     }
     .chatList {
         height: 40vh;
@@ -336,7 +341,7 @@ body {
         height: 24vh;
     }
 }
-@media screen and (max-width:1300px){
+@media screen and (min-width:880px) and (max-width:1300px){
     nav {
         width: 100%;
         height: auto;
@@ -374,9 +379,10 @@ body {
     }
     main {
         width: 100%;
+        margin-top: 1vh;
     }
     textarea {
-        width: 50vw;
+        width: 26vw;
     }
     .chatList::-webkit-scrollbar:vertical {
         width: 0vw;
@@ -386,9 +392,10 @@ body {
         margin-right: 0px;
         display: flex;
         flex-direction: column;
+        width: 40vw;
     }
     .chatList {
-        height: 40vh;
+        height: 78.5vh;
         border-radius: 0px !important;
     }
     .fotointro2 {
@@ -424,7 +431,7 @@ body {
         margin:5px;
     }
     .videos{
-        width: 96vw;
-        height: 55vh;
+        width: 55vw;
+        height: 25vh;
     }
 }
